# webmcp-gen

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: demo.tape
tests/: conftest.py  manual_mcp_client.py  test_analyze.py  test_benchmark.py  test_cache.py  test_crawl.py  test_execute.py  test_extract.py  test_serve.py  test_session.py  test_session_live.py  test_stealth.py  test_suite.py  test_validate.py  test_workflow.py
webmcp_gen/: __init__.py  __main__.py  analyze.py  benchmark.py  cache.py  cli.py  compare.py  crawl.py  execute.py  extract.py  serve.py  session.py  stealth.py  suite.py  validate.py  workflow.py
